--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.7.2",
+    "ng2-datetime-picker": "^0.15.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
